# FabricationLab

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
libs/: AuxBendingNormal.cpp  AuxBendingNormal.h  AuxSpherePerHinge.cpp  AuxSpherePerHinge.h  AuxVariables.cpp  AuxVariables.h  BendingNormal.cpp  BendingNormal.h  CMakeLists.txt  ClusterHard.cpp  ClusterHard.h  FixAllVertices.cpp  FixAllVertices.h  FixChosenConstraints.cpp  FixChosenConstraints.h  Minimizer.cpp  Minimizer.h  ObjectiveFunction.cpp  ObjectiveFunction.h  OptimizationUtils.h  SDenergy.cpp  SDenergy.h  STVK.cpp  STVK.h  TotalObjective.cpp  TotalObjective.h  UniformSmoothness.cpp  UniformSmoothness.h  fixRadius.cpp  fixRadius.h
models/: bunny.off
plugins/: CMakeLists.txt  app_utils.h  console_color.h  deformation_plugin.cpp  deformation_plugin.h  implot.cpp  implot.h  optimization_output.cpp  optimization_output.h  unique_colors.h
